tests/sawn/fixtures/valid/16_quoted_column_names.sawn
// Test: Quoted column names in table headers
data[][] "column one","column two",regular
  "a",1,true
  "b",2,false
