tests/sawn/fixtures/invalid/15_too_many_columns.sawn
// INVALID: Row has more columns than header
data[][] a,b
  1,2
  3,4,5
